--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 mod_version=0.6.0
-minecraft_version=1.18.2
-forge_version=40.1.85
+minecraft_version=1.19.2
+forge_version=43.2.4
 modid=tetrapak
-jei_version=9.7.1.255
-create_version = 0.5.0.g-209
-flywheel_version = 0.6.8-96
-registrate_version = MC1.18.2-1.1.3
+jei_version=11.5.2.1007
+create_version = 0.5.0.h-22
+flywheel_version = 0.6.8-a-14
+registrate_version = MC1.19-1.1.5
 mutil_version=1.18.2-4.5.0
 tetra_version=1.18.2-4.9.4
