--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -18,28 +18,28 @@ Currently, only Create is supported. Check back soon for more!
 [[dependencies.tetrapak]] #optional
 modId = "forge" #mandatory
 mandatory = true #mandatory
-versionRange = "[39.0.73,)" #mandatory
+versionRange = "[43.2.4,)" #mandatory
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.tetrapak]]
 modId = "minecraft"
 mandatory = true
-versionRange = "[1.18.1,1.19)"
+versionRange = "[1.19,1.19.2)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.tetrapak]]
 modId = "tetra"
 mandatory = true
-versionRange = "[3.8.0,)"
+versionRange = "[3.20.0,)"
 ordering = "AFTER"
 side = "BOTH"
 
 [[dependencies.tetrapak]]
 modId = "mutil"
 mandatory = true
-versionRange = "[3.1.3,)"
+versionRange = "[5.1.0,)"
 ordering = "AFTER"
 side = "BOTH"
 
@@ -53,7 +53,7 @@ side = "BOTH"
 [[dependencies.tetrapak]]
 modId = "create"
 mandatory = false
-versionRange = "[0.5.0.d,)"
+versionRange = "[0.5.0.h,)"
 ordering = "NONE"
 side = "BOTH"
 
