Sync works, build obviously throws errors

--- a/build.gradle
+++ b/build.gradle
@@ -149,7 +149,7 @@ dependencies {
      */
 
     // compileOnly fg.deobf("mezz.jei:jei-1.16.5:${jei_version}:api")
-    implementation fg.deobf("mezz.jei:jei-${minecraft_version}:${jei_version}")
+    implementation fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}")
 
     implementation fg.deobf("com.simibubi.create:create-${minecraft_version}:${create_version}:all") { transitive = false }
     implementation fg.deobf("com.jozufozu.flywheel:flywheel-forge-${minecraft_version}:${flywheel_version}")
