--- a/gradle.properties
+++ b/gradle.properties
@@ -7,8 +7,8 @@ minecraft_version=1.19.2
 forge_version=43.2.4
 modid=tetrapak
 jei_version=11.5.2.1007
-create_version = 0.5.0.h-22
-flywheel_version = 0.6.8-a-14
-registrate_version = MC1.19-1.1.5
+create_version=0.5.0.h-22
+flywheel_version=0.6.8.a-14
+registrate_version=MC1.19-1.1.5
 mutil_version=1.18.2-4.5.0
 tetra_version=1.18.2-4.9.4
